--- a/#source/scss/_vars.scss
+++ b/#source/scss/_vars.scss
@@ -1,2 +1,13 @@
+@import url('https://fonts.googleapis.com/css?family=Noto+Serif:400,700&display=swap&subset=cyrillic-ext');
+@import url('https://fonts.googleapis.com/css?family=Noto+Sans:400,400i,700&display=swap&subset=cyrillic-ext');
+@import url('https://fonts.googleapis.com/css?family=Playfair+Display:400,700&display=swap&subset=cyrillic');
+@font-face {
+	font-family: 'FuturaLight';
+	src: url('../../fonts/FuturaLight Light.eot');
+	src: local('☺'), url('../../fonts/FuturaLight Light.woff') format('woff'), url('../../fonts/FuturaLight Light.ttf') format('truetype'), url('../../fonts/FuturaLight Light.svg') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
 
 $primary-color: red;
