--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -4,7 +4,10 @@
 
 /* Начало новости */
 
-
+.microNews {
+	margin: 0 auto;
+	max-width: 1000px;
+	border: 5px solid grey;
   .fonts_Noto_Serif {
 	font-family: 'Noto Serif', serif;
 	font-weight: bold;
@@ -21,5 +24,5 @@
 	font-family: 'FuturaLight';
 	font-weight: normal;
   }
-
+}
 /* Конец новости */
